<resources>
    <string name="app_name">shoestore</string>
    <string name="type_your_id">TYPE YOUR ID</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="password_here">Password here</string>
    <string name="welcom">Welcome</string>
    <string name="Instruction">Move to instruction</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_text">The Horsemen was the tongue in cheek name given to the government program that placed a series of devices across the world, both in enemy and friendly countries.\n Her position at the table shifted as the program grew more complex; she dropped her feet to the ground and leaned forward, taking in the rapidly changing situation.</string>
    <string name="ShoeList">shoe list</string>
    <string name="LogOut">logout</string>
    <string name="name">name</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="description">description</string>
    <string name="shoe_name">shoe name</string>
</resources>